Minor add in msmtp attempt

--- a/ankisyncd/dockerfiles/Dockerfile-fetchmail
+++ b/ankisyncd/dockerfiles/Dockerfile-fetchmail
@@ -1,10 +1,4 @@
 FROM cguenther/docker-fetchmail:latest
 
 ### Install Application
-RUN apk upgrade --no-cache && \
-    apk add --no-cache --virtual=run-deps \
-      ca-certificates msmtp su-exec && \
-    rm -rf /tmp/* \
-           /var/cache/apk/*  \
-           /var/tmp/*
-
+RUN apk add ca-certificates msmtp su-exec
