--- a/ankisyncd/dockerfiles/Dockerfile-dnscrypt-server-docker
+++ b/ankisyncd/dockerfiles/Dockerfile-dnscrypt-server-docker
@@ -10,7 +10,7 @@ RUN set -ex; \
     ; \
     rm /var/spool/cron/crontabs/root; \
     mkdir -p /var/spool/cron/crontabs /var/log/supervisord /var/run/supervisord; \
-    echo '0 0 1 * * /usr/bin/dig . NS @75.127.96.89 > /opt/unbound/etc/unbound/opennic.cache' > /var/spool/cron/crontabs/_unbound; \
+    echo '0 0 1 * * /usr/bin/dig . NS @75.127.96.89 \> /opt/unbound/etc/unbound/opennic.cache' > /var/spool/cron/crontabs/_unbound; \
     /usr/bin/dig . NS @75.127.96.89 > /opt/unbound/etc/unbound/var/opennic.cache; \
     sed '5i\ \ root-hints: "/opt/unbound/etc/unbound/var/opennic.cache"' /opt/unbound/etc/unbound/unbound.conf > /opt/unbound/etc/unbound/unbound.conf;
 
