feat(nginx): add in stream to nginx

--- a/ankisyncd/dockerfiles/Dockerfile-nginx-nextcloud-proxy
+++ b/ankisyncd/dockerfiles/Dockerfile-nginx-nextcloud-proxy
@@ -2,3 +2,7 @@ FROM jwilder/nginx-proxy:alpine
 MAINTAINER Zweihänder
 
 COPY uploadsize-nginx-nextcloud-proxy.conf /etc/nginx/conf.d/uploadsize.conf
+
+RUN echo "stream {" >> /etc/nginx/nginx.conf && \
+    echo "    include /etc/nginx/conf.d/*.stream;" >> /etc/nginx/nginx.conf && \
+    echo "}" >> /etc/nginx/nginx.conf
