--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -32,12 +32,11 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: zweizs/docker-nginx-proxy-plus-stream
-          tags: >
-            type=semver,pattern={{version}}\n
-            type=semver,pattern={{major}}.{{minor}}\n
-            type=schedule,pattern={{date 'YYYYMMDD'}}\n
-            type=raw,value=latest,enable=
-            ${{ endsWith(github.ref, github.event.repository.default_branch) }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=schedule,pattern={{date 'YYYYMMDD'}}
+            type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
