build(github): use the right image

--- a/ankisyncd/.github/workflows/publish-docker.yml
+++ b/ankisyncd/.github/workflows/publish-docker.yml
@@ -28,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: zweizs/docker-tellico-web
+          images: zweizs/docker-ankisyncd
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
