build(github): change pattern for image names

--- a/ankisyncd/.github/workflows/publish-docker.yml
+++ b/ankisyncd/.github/workflows/publish-docker.yml
@@ -32,8 +32,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=schedule,pattern={{date 'YYYYMMDD'}}
-            type=raw,value=latest
+            type=raw,pattern={{date 'YYYYMMDD'}}
 
       - name: Build and push
         uses: docker/build-push-action@v2
