--- a/ankisyncd/.github/workflows/trigger-commit-check.yml
+++ b/ankisyncd/.github/workflows/trigger-commit-check.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - run: ./isUpdated.sh
+      - run: .github/workflows/isUpdated.sh
