docs(readme): take out old actions

--- a/ankisyncd/.github/workflows/publish-docker.yml
+++ b/ankisyncd/.github/workflows/publish-docker.yml
@@ -8,6 +8,8 @@ name: Publish DockerHub image
       - "v*"
     paths-ignore:
       - ".github/**"
+      - "README.md"
+      - "LICENSE"
   workflow_dispatch:
 
 jobs:
