--- a/.github/workflows/nextcloud-plus-cron.yml
+++ b/.github/workflows/nextcloud-plus-cron.yml
@@ -1,5 +1,5 @@
 ---
-name: Publish DockerHub image
+name: Publish zweizs/docker-nextcloud-plus-cron
 "on":
   workflow_dispatch:
   schedule:
@@ -8,11 +8,10 @@ name: Publish DockerHub image
     branches:
       - "master"
     tags:
-      - "v*"
-    paths-ignore:
-      - ".gitignore"
-      - "LICENSE"
-      - "*.md"
+      - "nextcloud/v*"
+    paths:
+      - "nextcloud-plus-cron/**"
+      - "!nextcloud-plus-cron/README.md"
 
 jobs:
   build-container:
@@ -41,7 +40,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: "{{defaultContext}}:nextcloud-plus-cron"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
