--- a/.github/workflows/ankisyncd.yml
+++ b/.github/workflows/ankisyncd.yml
@@ -35,6 +35,9 @@ jobs:
             type=raw,value={{date 'YYYYMMDD'}}
             type=raw,latest
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
