--- a/.github/workflows/nginx-proxy-plus-stream.yml
+++ b/.github/workflows/nginx-proxy-plus-stream.yml
@@ -37,6 +37,9 @@ jobs:
             type=schedule,pattern={{date 'YYYYMMDD'}}
             type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
