--- a/.github/workflows/tellico-web.yml
+++ b/.github/workflows/tellico-web.yml
@@ -34,6 +34,9 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
