--- a/.github/workflows/anki-sync-server.yml
+++ b/.github/workflows/anki-sync-server.yml
@@ -29,8 +29,7 @@ jobs:
         with:
           images: zweizs/docker-anki-sync-server
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=match,pattern=anki-sync-server/v(\d.\d.\d),group=1
             type=raw,value={{date 'YYYYMMDD'}}
             type=raw,latest
 
