build(anki-sync-server): fix matching numbers

--- a/.github/workflows/anki-sync-server.yml
+++ b/.github/workflows/anki-sync-server.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           images: zweizs/anki-sync-server
           tags: |
-            type=match,pattern=anki-sync-server/v(\d.\d.\d),group=1
+            type=match,pattern=anki-sync-server/v(\d+.\d+.\d+),group=1
             type=raw,value={{date 'YYYYMMDD'}}
             type=raw,latest
 
