--- a/.github/workflows/nextcloud-plus-cron.yml
+++ b/.github/workflows/nextcloud-plus-cron.yml
@@ -32,8 +32,7 @@ jobs:
         with:
           images: zweizs/docker-nextcloud-plus-cron
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=match,pattern=nextcloud-v(\d+.\d+.\d+),group=1
             type=schedule,pattern={{date 'YYYYMMDD'}}
             type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
 
