--- a/.github/workflows/tellico-web.yml
+++ b/.github/workflows/tellico-web.yml
@@ -30,8 +30,7 @@ jobs:
         with:
           images: zweizs/docker-tellico-web
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=match,pattern=tellico-web-v(\d+.\d+.\d+),group=1
             type=raw,value=latest
 
       - name: Set up Docker Buildx
