--- a/.github/workflows/tellico-web.yml
+++ b/.github/workflows/tellico-web.yml
@@ -30,8 +30,9 @@ jobs:
         with:
           images: zweizs/docker-tellico-web
           tags: |
-            type=match,pattern=tellico-web-v(\d+.\d+.\d+),group=1
-            type=raw,value=latest
+            type=match,pattern=tellico-v(\d+.\d+.\d+),group=1
+            type=raw,value={{date 'YYYYMMDD'}}
+            type=raw,latest
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
