--- a/.github/workflows/nginx-proxy-plus-stream.yml
+++ b/.github/workflows/nginx-proxy-plus-stream.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           images: zweizs/docker-nginx-proxy-plus-stream
           tags: |
+            type=match,pattern=nginx-v(\d+.\d+.\d+-\d+),group=1
             type=match,pattern=nginx-v(\d+.\d+.\d+),group=1
             type=schedule,pattern={{date 'YYYYMMDD'}}
             type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
