fix(anki-sync-server): separate venv and data

--- a/anki-sync-server/Dockerfile
+++ b/anki-sync-server/Dockerfile
@@ -1,16 +1,17 @@
 FROM python:3.11-slim
 ARG ANKISYNCSERVER_ROOT=/data
+ARG ANKISYNCSERVER_VENV=/venv
 ARG ANKISYNCSERVER_VERSION="2.1.57"
 ARG ANKISYNCSERVER_PORT=8080
 
-RUN mkdir -p ${ANKISYNCSERVER_ROOT} && \
-    python3 -m venv ${ANKISYNCSERVER_ROOT} && \
-    ${ANKISYNCSERVER_ROOT}/bin/pip install "anki==${ANKISYNCSERVER_VERSION}"
+RUN mkdir -p ${ANKISYNCSERVER_ROOT} ${ANKISYNCSERVER_VENV}} && \
+    python3 -m venv ${ANKISYNCSERVER_VENV} && \
+    ${ANKISYNCSERVER_VENV}/bin/pip install "anki==${ANKISYNCSERVER_VERSION}"
 
-ENV VENV_ROOT="${ANKISYNCSERVER_ROOT}"
+ENV VENV_ROOT="${ANKISYNCSERVER_VENV}"
 
 ENV SYNC_USER1="user:password"
-ENV SYNC_BASE="${VENV_ROOT}"
+ENV SYNC_BASE="${ANKISYNCSERVER_ROOT}"
 ENV SYNC_HOST=0.0.0.0
 ENV SYNC_PORT=${ANKISYNCSERVER_PORT}
 ENV MAX_SYNC_UPLOAD_MEGS=100
