fix(tellico): update to using custom novnc setup

--- a/tellico-web/Dockerfile
+++ b/tellico-web/Dockerfile
@@ -1,12 +1,12 @@
 ARG TELLICO_VERSION=3.4.6-1
 
-FROM golang:1-bullseye AS easy-novnc-build
+# FROM golang:1-bullseye AS easy-novnc-build
 
-WORKDIR /src
+# WORKDIR /src
 
-RUN go mod init build && \
-    go get github.com/geek1011/easy-novnc@v1.1.0 && \
-    go build -o /bin/easy-novnc github.com/geek1011/easy-novnc
+# RUN go mod init build && \
+#     go get github.com/geek1011/easy-novnc@v1.1.0 && \
+#     go build -o /bin/easy-novnc github.com/geek1011/easy-novnc
 
 FROM debian:sid-slim
 
@@ -15,18 +15,23 @@ ARG TELLICO_VERSION
 ENV UID=1000
 ENV GID=1000
 
+COPY ./bin/prefix-output.sh /opt/prefix-output.sh
+
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends tigervnc-standalone-server \
     supervisor gosu ca-certificates ratpoison plasma-desktop dbus-x11 \
+    novnc nginx \
     kio-extras tellico=$TELLICO_VERSION && \
     apt-get clean && rm -rf /var/lib/apt/lists && \
     mkdir -p /usr/share/desktop-directories && \
     groupadd --gid $GID app && \
     useradd --home-dir /data --shell /bin/bash --uid $UID --gid $GID app && \
-    mkdir -p /data
+    mkdir -p /data && \
+    chmod +x /opt/prefix-output.sh
 
-COPY --from=easy-novnc-build /bin/easy-novnc /usr/local/bin/
 COPY ./bin/supervisord.conf /etc/
+COPY ./bin/nginx.conf /etc/nginx/
+COPY ./bin/index.html /usr/share/novnc/
 EXPOSE 8080
 
 VOLUME /data
