--- a/tellico-web/bin/supervisord.conf
+++ b/tellico-web/bin/supervisord.conf
@@ -4,17 +4,26 @@ pidfile=/tmp/supervisord.pid
 logfile=/dev/fd/1
 logfile_maxbytes=0
 
-[program:x11]
+[program:tigervnc]
 priority=0
-command=/usr/bin/Xtigervnc -desktop "Tellico" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+command=/opt/prefix-output.sh /usr/bin/Xtigervnc -desktop "Tellico" -localhost -rfbport 5900 -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText :0
+startsecs=5
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:easy-novnc]
+[program:novnc]
 priority=0
-command=/usr/local/bin/easy-novnc --addr :8080 --host localhost --port 5900 --no-url-password --novnc-params "resize=remote"
+command=/opt/prefix-output.sh /usr/bin/websockify --web=/usr/share/novnc/ 6080 localhost:5900
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:nginx]
+priority=0
+command=/opt/prefix-output.sh /usr/sbin/nginx -c /etc/nginx/nginx.conf
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -22,17 +31,18 @@ redirect_stderr=true
 
 [program:ratpoison]
 priority=1
+startretries=6
 environment=DISPLAY=:0
-command=/usr/bin/ratpoison -d :0
+command=/opt/prefix-output.sh /usr/bin/ratpoison -d :0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:app]
+[program:tellico]
 priority=2
 environment=DISPLAY=:0
-command=/usr/bin/tellico
+command=/opt/prefix-output.sh /usr/bin/tellico
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
