fix(tellico): explicitly add size env

--- a/tellico-web/Dockerfile
+++ b/tellico-web/Dockerfile
@@ -50,6 +50,8 @@ ENV KEEP_APP_RUNNING 1
 ENV DARK_MODE 0
 ENV WEB_LISTENING_PORT 8080
 ENV ENABLE_CJK_FONT 1
+ENV DISPLAY_WIDTH 1920
+ENV DISPLAY_HEIGHT 1080
 
 COPY --from=builder /dist /
 COPY /rootfs /
