--- a/.github/workflows/tellico-web.yml
+++ b/.github/workflows/tellico-web.yml
@@ -32,6 +32,7 @@ jobs:
           tags: |
             type=match,pattern=tellico-v(\d+.\d+.\d+-\d+),group=1
             type=match,pattern=tellico-v(\d+.\d+.\d+),group=1
+            type=match,pattern=tellico-v(\d+.\d+),group=1
             type=raw,value={{date 'YYYYMMDD'}}
             type=raw,latest
 
