feat(tellico): update to tellico 4
Updated alpine to 3.21
Updated qt5 to qt6
Updated kf5 to kf6

--- a/tellico-web/Dockerfile
+++ b/tellico-web/Dockerfile
@@ -1,4 +1,4 @@
-ARG TELLICO_VERSION=3.5.5
+ARG TELLICO_VERSION=4.0.1
 
 FROM alpine:latest AS src
 RUN apk --update --no-cache add curl git tar tree xz
@@ -8,40 +8,41 @@ FROM src as src-tellico
 ARG TELLICO_VERSION
 RUN curl -SsL "https://tellico-project.org/files/tellico-${TELLICO_VERSION}.tar.xz" | tar xJ --strip 1
 
-FROM alpine:3.18 AS builder
+FROM alpine:3.21 AS builder
 RUN apk --update --no-cache add \
     autoconf \
     automake \
     binutils \
     build-base \
-    tar \
-    tree \
-    xz \
     cmake \
-    extra-cmake-modules \
-    kdelibs4support-dev \
-    qt5-qtwebengine-dev \
-    qt5-qtcharts-dev \
-    taglib-dev \
-    poppler-dev \
-    poppler-qt5-dev \
     exempi-dev \
-    knewstuff-dev \
+    extra-cmake-modules \
+    kdoctools-dev \
     kfilemetadata-dev \
+    kitemmodels-dev \
+    knewstuff-dev \
     libcdio-dev \
     libkcddb-dev \
     libksane-dev \
-    perl-text-bibtex
+    perl-text-bibtex \
+    poppler-dev \
+    poppler-qt6\
+    qt6-qtcharts-dev \
+    qt6-qtwebengine-dev \
+    taglib-dev \
+    tar \
+    tree \
+    xz
 
 ENV DIST_PATH="/dist"
 WORKDIR /usr/local/src/tellico
 COPY --from=src-tellico /src .
-RUN cmake . -DCMAKE_INSTALL_PREFIX=`kf5-config --prefix`
+RUN cmake . -DCMAKE_INSTALL_PREFIX=/usr
 RUN make -j$(nproc)
 RUN make DESTDIR=${DIST_PATH} install -j$(nproc)
 RUN tree ${DIST_PATH}
 
-FROM jlesage/baseimage-gui:alpine-3.17-v4
+FROM jlesage/baseimage-gui:alpine-3.21-v4
 ARG TELLICO_VERSION
 
 ENV USER_ID 1000
@@ -55,10 +56,28 @@ ENV DISPLAY_HEIGHT 1080
 
 COPY --from=builder /dist /
 COPY /rootfs /
-RUN add-pkg ca-certificates kded dbus-x11 mesa-dri-gallium \
-    qt5-qtwebengine qt5-qtcharts taglib poppler poppler-qt5 exempi \
-    knewstuff kfilemetadata libcdio libkcddb libksane perl-text-bibtex \
-    kdelibs4support kitemmodels kio breeze-icons plasma-integration && \
+RUN add-pkg \
+    breeze-icons \
+    ca-certificates \
+    dbus-x11 \
+    exempi \
+    kded \
+    kdoctools \
+    kfilemetadata \
+    kio \
+    kitemmodels \
+    knewstuff \
+    libcdio \
+    libkcddb \
+    libksane \
+    mesa-dri-gallium \
+    perl-text-bibtex \
+    plasma-integration \
+    poppler \
+    poppler-qt6 \
+    qt6-qtcharts \
+    qt6-qtwebengine \
+    taglib && \
     mkdir -p /usr/share/desktop-directories /data /data/.config /data/.local/share/tellico && \
     cp /usr/share/tellico/tellico-common.xsl /data/.local/share/tellico/tellico-common.xsl && \
     set-cont-env APP_NAME "Tellico" && \
